<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/andela_logo"
            android:layout_height="@dimen/andela_logo"
            android:contentDescription="@string/andela"
            app:srcCompat="@drawable/andela" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_padding"
            android:fontFamily="@font/ofont"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="@dimen/name_tv_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/ofont"
            android:onClick="Onclick"
            android:text="@string/txt_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/name_tv_size"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_alc_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/ofont"
            android:onClick="Onclick"
            android:text="@string/txt_alc_connect"
            android:textColor="@android:color/white"
            android:textSize="@dimen/name_tv_size"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
