<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_alc_connect">About ALC</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="andela_logo">Andela Logo</string>
    <string name="name">OPPONG AGYEI ENOCH</string>
    <string name="track">Track : \t  Android</string>
    <string name="country">Country : \t Ghana</string>
    <string name="myemail">Email : \t oppongagyeienoch@gmail.com</string>
    <string name="tel">Phone Number : \t  +233240741137</string>
    <string name="slack_username">Slack Username : \t  @deejaypromzy</string>
    <string name="andela">andela_logo</string>
</resources>
